# tinyvid

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: download-ffmpeg.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: compression.rs  image.rs  mod.rs  probe.rs  system.rs
src-tauri/src/ffmpeg/: args.rs  encoder.rs  mod.rs  probe.rs  process.rs  progress.rs  quality.rs
src-tauri/src/image/: compress.rs  config.rs  manager.rs  mod.rs  probe.rs
src-tauri/src/task/: base_manager.rs  manager.rs  mod.rs  types.rs  worker.rs
src-tauri/src/utils/: error.rs  mod.rs  path.rs  platform.rs
src/components/: ErrorBoundary.tsx
src/components/comparison/: ComparisonView.tsx
src/components/image/: ImageFileTable.tsx  ImagePage.tsx  ImageSettings.tsx
src/components/import/: DropZone.tsx  FileList.tsx  FileTable.tsx  UnifiedFileTable.tsx
src/hooks/: useCompression.ts  useDiskCheck.ts  useEstimation.ts  useFileImport.ts  useHardwareInfo.ts  useImageCompression.ts  useImageImport.ts  useKeyboardShortcuts.ts  useNotification.ts  useTauriDragDrop.ts  useUnifiedCompression.ts  useUnifiedImport.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/lib/: cn.ts  constants.ts  estimation.ts  format.ts  tauri.ts
src/stores/: appStore.ts  imageStore.ts  settingsStore.ts  taskStore.ts  unifiedStore.ts
src/test/: setup.ts
(+34 files in other folders)
