[package]
name = "tinyvid"
version = "0.1.0"
description = "A cross-platform video batch compression tool"
authors = ["jackie"]
edition = "2021"

[lib]
name = "tinyvid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
regex = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
